Fix line spacing issues where links had greater line-height than surrounding text

--- a/content/_assets/styles/components/quire-page.scss
+++ b/content/_assets/styles/components/quire-page.scss
@@ -719,7 +719,7 @@ html {
         color: $print-text-color;
         border-bottom-width: 0;
       }
-      line-height: 1.6;
+      line-height: inherit;
       @if $theme == classic {
         color: background-color-text-classic($content-background-color);
         border-bottom: 1px
